<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/home_group">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
    </group>



    <group android:id="@+id/category_group">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_baseline_menu_open_24"
            android:title="@string/menu_menu" />
    </group>

    <group android:id="@+id/news_group">

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_baseline_fiber_new_24"
            android:title="@string/menu_subscribe_news" />
    </group>

    <group android:id="@+id/cart_group">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_cart"/>
    </group>

    <group android:id="@+id/view_orders_group">
        <item
            android:id="@+id/nav_view_orders"
            android:icon="@drawable/ic_baseline_view_headline_24"
            android:title="@string/menu_view_orders"/>
    </group>




</menu>